feat: allow commit and push to fail

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,11 +24,13 @@ jobs:
           git config --global user.email '${{github.actor}}@users.noreply.github.com'  
       
       - name: Commit
+        continue-on-error: true
         run: |
           git add dist/*
           git commit -m 'chore(build): Update built files.'
 
       - name: Push
+        continue-on-error: true
         run: git push origin HEAD
 
   test-exec:
